# phoa

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARK.md
scripts/: run_cli.sh  run_streamlit.sh
src/phoa/: __init__.py  benchmark.py  cli.py  coordinator.py  drones.py  policies.py  simulation.py  spatial_grid.py  streamlit_app.py  telemetry.py  tuning.py
tests/: conftest.py  test_benchmark.py  test_coordinator.py  test_simulation.py  test_tuning.py
