[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pride-hunt-phoa"
version = "0.2.0"
description = "PHOA (Pride-Hunt Optimization Algorithm) para drones em SAR e logistica urbana"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Equipe PHOA" }
]
keywords = ["optimization", "bio-inspired", "robotics", "drones", "sar"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "streamlit>=1.40.0",
  "plotly>=5.24.0",
  "pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[project.scripts]
phoa-cli = "phoa.cli:main"
phoa-tuning = "phoa.tuning:main"

[project.gui-scripts]
phoa-streamlit = "phoa.streamlit_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
